--- a/index.html
+++ b/index.html
@@ -1,97 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EvPk Minecraft Server</title>
-    <style>
-        /* Add your CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
-            text-align: center;
-        }
-        nav {
-            background-color: #444;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-            margin: 0 10px;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        nav a:hover {
-            background-color: #666;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            text-align: center;
-        }
-        section {
-            margin-top: 20px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Welcome to EvPk Minecraft Server</h1>
-    </header>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#server-info">Server Info</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <div class="container">
-        <section id="home">
-            <h2>Home</h2>
-            <p>Welcome to EvPk Minecraft Server, based on the "EVBO'S Parkour Civilization" series. Join us for some epic adventures!</p>
-        </section>
-        <section id="server-info">
-            <h2>Server Information</h2>
-            <p>Owner: Unjoyed</p>
-            <p>IP Address: EvPk.minehut.org</p>
-    
-            <p>EvPk is a Minecraft server inspired by the EVBOS Parkour Civilization series. Join us to experience thrilling parkour challenges and battle players.
-
-You can watch Evbo's parkour civilization movie here:</p> <iframe width="420" height="315"
-src="https://www.youtube.com/embed/2pFwQiwRbcg">
-</iframe>
-            <p>EvPk server rules: Do not bypass the chat filter. 
-                1. Keep the server family friendly.
-                2. Follow all of the /buildrules and /battlerules.
-                3. Do not advertize other servers (etc.) or encourage players to leave the server.
-                4. Use common sense.<p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Have questions or feedback? Feel free to contact us!</p>
-            <p>Discord: https://discord.gg/xukwRqDx</p>
-</body>
-</html>
+<iframe src="https://static.arcadespot.com/retroemulator.php?system=sega&game=2019/10/An%20Ordinary%20Sonic%20Hack.gen" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
