--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://static.arcadespot.com/retroemulator.php?system=sega&game=2019/10/An%20Ordinary%20Sonic%20Hack.gen" width="100%" height="600px" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://static.arcadespot.com/retroemulator.php?system=sega&game=2019/10/An%20Ordinary%20Sonic%20Hack.gen" width="100%" height="600px" frameborder="0" allowfullscreen style="background-color: black;"></iframe>
